# numbat

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  SConstruct  pyproject.toml  setup.py
src/labeling_tool/: MainWindow.py  Ui_MainWindow.ui  VideoTimer.py  YCbCrDisplayWidget.py  __init__.py  decoder.py  widgets.py
src/numbat/: MainWindow.py  MainWindow.ui  YCbCrDisplayWidget.py  __init__.py  aboutdialog.py  aboutdialog.qrc  aboutdialog.ui  glwidgets.py  mainwindow.py  mainwindow.qrc  mainwindow.ui  videotimer.py  widgets.py
src/numbat/text/: about.html  credits.html
tests/: test_VideoTimer.py  test_videotimer.py
